// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderTest render: no feature flag store data 1`] = `
"<header className=\\"header-bar\\">
  <div className=\\"header-text-switcher\\">
    <Component deps={{...}} />
    <div className=\\"ms-font-m header-text\\">
      Accessibility Insights for Web
    </div>
  </div>
</header>"
`;

exports[`HeaderTest render: tabClosed is false 1`] = `
<header
  className="header-bar"
>
  <div
    className="header-text-switcher"
  >
    <Component
      deps={null}
    />
    <div
      className="ms-font-m header-text"
    >
      Accessibility Insights for Web
    </div>
    <Switcher
      deps={null}
      pivotKey={2}
    />
  </div>
  <GearOptionsButtonComponent
    dropdownClickHandler={
      proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "dropdownActionMessageCreator": undefined,
        "openPreviewFeaturesPanelHandler": [Function],
        "openScopingPanelHandler": [Function],
        "openSettingsPanelHandler": [Function],
        "source": undefined,
      }
    }
    featureFlags={
      Object {
        "test-flag": true,
      }
    }
  />
</header>
`;

exports[`HeaderTest render: tabClosed is true 1`] = `
<header
  className="header-bar"
>
  <div
    className="header-text-switcher"
  >
    <Component
      deps={null}
    />
    <div
      className="ms-font-m header-text"
    >
      Accessibility Insights for Web
    </div>
  </div>
</header>
`;
